<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aula3.taller1christianangulo.MainActivity"
    android:orientation="vertical">

    <RelativeLayout

        android:id="@+id/rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/balon_de_futbol_hierba_165931"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientatio="horizontal"
        android:layout_below="@+id/rl_1">

        <RelativeLayout
            android:id="@+id/rl_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fondo"

            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txe"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"

                ></TextView>

            <TextView
                android:id="@+id/txt_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txe1"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
android:layout_below="@id/txt_2"
                ></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo">

            <TextView
                android:id="@+id/txt_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txe22"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"></TextView>

            <TextView
                android:id="@+id/txt_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txe23"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_8"></TextView>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fondo">

            <TextView
                android:id="@+id/txt_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txe55"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"></TextView>
            <TextView
                android:id="@+id/txt_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txe56"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/txt_9"></TextView>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/far" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/im">


                    <TextView
                        android:id="@+id/tx1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/ny"

                        />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tx1"
                        android:text="@string/ny1" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/fut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/real" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/fut">


                    <TextView
                        android:id="@+id/tx01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="10dp"
                        android:text="@string/re"

                        />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tx01"
                        android:text="@string/re1" />
                </RelativeLayout>
            </RelativeLayout><RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/roma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/roma" />

            <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/roma">


            <TextView
                android:id="@+id/tx001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:text="@string/ro"

                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tx001"
                android:text="@string/ro1" />
        </RelativeLayout>

        </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
